project(isotools)

cmake_minimum_required(VERSION 2.8)

set(ISOTOOLS_PACKAGE isotools)
set(ISOTOOLS_VERSION_MAJOR 1)
set(ISOTOOLS_VERSION_MINOR 0)
set(ISOTOOLS_VERSION_PATCH 0)
set(ISOTOOLS_VERSION "${ISOTOOLS_VERSION_MAJOR}.${ISOTOOLS_VERSION_MINOR}.${ISOTOOLS_VERSION_PATCH}")

set(CPACK_SOURCE_GENERATOR TGZ)
set(CPACK_PACKAGE_VERSION_MAJOR ${ISOTOOLS_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${ISOTOOLS_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${ISOTOOLS_VERSION_PATCH})
set(CPAKE_PACKAGE_VENDOR "Theo Berkau")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
set(CPACK_SOURCE_PACKAGE_FILE_NAME "isotools-${ISOTOOLS_VERSION}")
include(CPack)

add_subdirectory(src)
