project(vcdextract)

cmake_minimum_required(VERSION 2.8)

set(VCDEXTRACT_PACKAGE vcdextract)
set(VCDEXTRACT_VERSION_MAJOR 1)
set(VCDEXTRACT_VERSION_MINOR 0)
set(VCDEXTRACT_VERSION_PATCH 1)
set(VCDEXTRACT_VERSION "${VCDEXTRACT_VERSION_MAJOR}.${VCDEXTRACT_VERSION_MINOR}.${VCDEXTRACT_VERSION_PATCH}")

set(CPACK_SOURCE_GENERATOR TGZ)
set(CPACK_PACKAGE_VERSION_MAJOR ${VCDEXTRACT_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${VCDEXTRACT_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${VCDEXTRACT_VERSION_PATCH})
set(CPAKE_PACKAGE_VENDOR "Theo Berkau")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
set(CPACK_SOURCE_PACKAGE_FILE_NAME "vcdextract-${VCDEXTRACT_VERSION}")
include(CPack)

add_subdirectory(src)
